--- a/src/org.meeboo/main/resources/application.properties
+++ b/src/org.meeboo/main/resources/application.properties
@@ -1,1 +1,2 @@
-server.port=8081
+spring.data.mongodb.uri=mongodb+srv://GenPatton:Qje5JhV62ABZuzpB@cluster0.7b7l0.mongodb.net/Irish?retryWrites=true&w=majority
+server.port=8082
