--- a/src/org.meeboo/main/resources/application.properties
+++ b/src/org.meeboo/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.data.mongodb.uri=mongodb+srv://GenPatton:Qje5JhV62ABZuzpB@cluster0.7b7l0.mongodb.net/Irish?retryWrites=true&w=majority
-
+spring.servlet.multipart.max-file-size=256MB
+spring.servlet.multipart.max-request-size=256MB
+spring.servlet.multipart.enabled=true
 server.port=8082
