--- a/src/org.meeboo/main/resources/application.properties
+++ b/src/org.meeboo/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.servlet.multipart.max-file-size=256MB
 spring.servlet.multipart.max-request-size=256MB
 spring.servlet.multipart.enabled=true
 server.port=8082
+
+server.ssl.enabled=true
+server.ssl.key-store=classpath:key.p12
+server.ssl.key-store-password =Fkeudhei$*
+server.ssl.key-password =Fkeudhei$*
+server.ssl.keyStoreType-PKCS12
